--- a/styles.css
+++ b/styles.css
@@ -5,20 +5,27 @@
   font-size: 1rem;
 }
 
-@@font-face {
-  font-family: 'Gelasio', serif;
-}
-body {
-  background-color: #EBDDFC;
+@font-face {
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
+
+
 .header {
-  border: 1px solid red;
-  background-color: #141712;
+  background-color: #333533;
   display: flex;
+  border-bottom: 2px solid #E9EBEB;
 }
 .header h1 {
-  color: #D5DAD2;
+  color: #E9EBEB;
   padding: 10px;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 1.5rem;
+
+}
+
+.section-container{
+  display: flex;
+  justify-content: center;
+/*  border: 3px solid red;*/
 }
