--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,21 @@
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+body {
+  background-color: #F5CB5C;
+}
 
+.shadow {
+  -webkit-box-shadow: 0px 7px 12px 0px rgba(36,36,35,1);
+  -moz-box-shadow: 0px 7px 12px 0px rgba(36,36,35,1);
+  box-shadow: 0px 7px 12px 0px rgba(36,36,35,1);
+}
 
 .header {
   background-color: #333533;
   display: flex;
-  border-bottom: 2px solid #E9EBEB;
+  border-bottom: 5px solid #E9EBEB;
+  width: 100%;
 }
 .header h1 {
   color: #E9EBEB;
@@ -25,7 +34,19 @@
 }
 
 .section-container{
-  display: flex;
-  justify-content: center;
-/*  border: 3px solid red;*/
+ /*border: 3px solid red;*/
+
+ background-color: #333533;
+}
+
+.section-container h2,
+.section-container p {
+  font-size: 1rem;
+  color: #E9EBEB;
+  padding: 10px;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.section-container p  {
+ font-style: italic;
 }
