--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
   padding: 0;
   box-sizing: border-box;
   font-size: 1rem;
+  font-family: 'Source Sans Pro', sans-serif;
+
 }
 
 @font-face {
@@ -10,13 +12,19 @@
 }
 
 body {
-  background-color: #F5CB5C;
+  background-color: #E6AD0F;
 }
 
 .shadow {
-  -webkit-box-shadow: 0px 7px 12px 0px rgba(36,36,35,1);
-  -moz-box-shadow: 0px 7px 12px 0px rgba(36,36,35,1);
-  box-shadow: 0px 7px 12px 0px rgba(36,36,35,1);
+  -webkit-box-shadow: inset 0px -8px 5px 0px rgba(20,21,20,1);
+  -moz-box-shadow: inset 0px -8px 5px 0px rgba(20,21,20,1);
+  box-shadow: inset 0px -8px 5px 0px rgba(20,21,20,1);
+}
+
+.shadow-rv {
+  -webkit-box-shadow: 0px 8px 5px 0px rgba(51,53,51,1);
+  -moz-box-shadow: 0px 8px 5px 0px rgba(51,53,51,1);
+  box-shadow: 0px 8px 5px 0px rgba(51,53,51,1);
 }
 
 .header {
@@ -37,16 +45,60 @@ body {
  /*border: 3px solid red;*/
 
  background-color: #333533;
+ min-height: 300px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
 }
 
-.section-container h2,
-.section-container p {
-  font-size: 1rem;
-  color: #E9EBEB;
-  padding: 10px;
-  font-family: 'Source Sans Pro', sans-serif;
+.section-container-2{
+ /*border: 3px solid red;*/
+
+ background-color: #E6AD0F;
+ min-height: 300px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+}
+
+.section-container h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #E6AD0F;
+  padding-left: 20px;
+  padding-top: 10px;
 }
 
 .section-container p  {
  font-style: italic;
+ color: #E9EBEB;
+ padding: 20px;
+}
+
+.section-container-2 h2 {
+  font-size: 1.5rem;
+  color: #333533;
+  padding-left: 20px;
+  padding-top: 10px;
+  font-weight: 700;
+}
+
+.section-container-2 p  {
+ font-style: italic;
+ color: #E9EBEB;
+ padding: 20px;
+}
+
+
+
+#introduce,
+#leonardo{
+  font-style: normal;
+  font-weight: 700;
+  color: #E6AD0F;
+}
+#records a{
+  font-style: normal;
+  font-weight: 700;
+  color: #333533;
 }
