--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,9 @@
 }
 
 .shadow-rv {
-  -webkit-box-shadow: 0px 8px 5px 0px rgba(51,53,51,1);
-  -moz-box-shadow: 0px 8px 5px 0px rgba(51,53,51,1);
-  box-shadow: 0px 8px 5px 0px rgba(51,53,51,1);
+  -webkit-box-shadow: inset 0px 10px 5px -1px rgba(0,0,0,0.75);
+  -moz-box-shadow: inset 0px 10px 5px -1px rgba(0,0,0,0.75);
+  box-shadow: inset 0px 10px 5px -1px rgba(0,0,0,0.75);
 }
 
 .header {
@@ -45,6 +45,10 @@
  display: flex;
  flex-direction: column;
  justify-content: center;
+}
+
+.section-container img {
+  padding: 10px;
 }
 
 .section-container h2 {
@@ -76,7 +80,7 @@
 
 .section-container-2 h2 {
   font-size: 1.5rem;
-  color: #333533;
+  color: #E9EBEB;
   padding-left: 20px;
   padding-top: 10px;
   font-weight: 700;
@@ -84,9 +88,19 @@
 
 .section-container-2 p  {
  font-style: italic;
- color: #E9EBEB;
+   color: #333533;
  padding: 20px;
 }
+
+.logo-box {
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 10px;
+  background-color: #E6AD0F;
+  margin: 10px;
+  border-radius: 5px;
+}
+
 
 #introduce,
 #leonardo{
@@ -98,8 +112,16 @@
   font-style: normal;
   font-weight: 700;
   color: #333533;
-  background-color: #E9EBEB;
+  background-color: #E6AD0F;
   padding: 0px 5px;
   border-radius: 3px;
+  margin: 10px;
   cursor: pointer;
+}
+
+#mixcloud-player {
+  margin: 10px;
+  border: 10px solid #333533;
+  height: 140px;
+  border-radius: 5px;
 }
