--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@
 }
 
 .section-container{
-/*border: 3px solid red;*/
+border: 3px solid red;
 
  background-color: #333533;
  display: flex;
@@ -47,10 +47,12 @@
  justify-content: center;
 }
 
-.section-container img {
-  padding: 10px;
+#alter-ego {
   border-radius: 5px;
   display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 10px;
 }
 
 .section-container h2 {
@@ -99,10 +101,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding: 10px;
-  background-color: #E6AD0F;
   margin: 10px;
+  background-color: #E6AD0F;
   border-radius: 5px;
+}
+
+.logo-box img {
+  height: auto;
+  padding: 10px;
+  align-items: center;
 }
 
 #soundcloud {
@@ -116,7 +123,8 @@
   font-weight: 700;
   color: #E6AD0F;
 }
-#records a{
+#records a,
+#iigipi a{
   font-style: normal;
   font-weight: 700;
   color: #333533;
@@ -125,6 +133,18 @@
   border-radius: 3px;
   margin: 10px;
   cursor: pointer;
+}
+
+
+#iigipi a {
+  color: #E6AD0F;
+  background-color: #333533;
+}
+
+
+#records a:hover,
+#iigipi a:hover{
+  color: #E9EBEB;
 }
 
 #mixcloud-player {
