--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,9 @@
 .ks {
   background-color: #333533;
   /*border-bottom: 5px solid #E9EBEB;*/
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
 
   	animation: slide-bottom 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
@@ -44,6 +47,9 @@
   font-size: 1.5rem;
 }
 
+#vinyl {
+  margin: 20px;
+}
 
 
 
